--- a/share_handler/example/android/app/src/main/AndroidManifest.xml
+++ b/share_handler/example/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.shoutsocial.share_handler_android_example">
 
     <application
@@ -76,6 +77,47 @@
             <meta-data
                 android:name="android.app.shortcuts"
                 android:resource="@xml/share_targets" />
+
+
+            <intent-filter tools:ignore="AppLinkUrlError">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:mimeType="text/*" />
+                <data android:mimeType="application/epub+zip" />
+                <data android:mimeType="application/x-expandedbook" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="file" />
+                <data android:host="*" />
+                <data android:pathPattern=".*\.epub" />
+                <data android:pathPattern=".*\.mobi" />
+                <data android:pathPattern=".*\.azw3" />
+                <data android:pathPattern=".*\.azw" />
+                <data android:pathPattern=".*\.txt" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="file" />
+                <data android:host="*" />
+                <data android:mimeType="*/*" />
+                <data android:pathPattern=".*\.epub" />
+                <data android:pathPattern=".*\.mobi" />
+                <data android:pathPattern=".*\.azw3" />
+                <data android:pathPattern=".*\.azw" />
+                <data android:pathPattern=".*\.txt" />
+            </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
