--- a/share_handler/pubspec.yaml
+++ b/share_handler/pubspec.yaml
@@ -28,7 +28,9 @@ dependencies:
     sdk: flutter
 #  share_handler_android: ^0.0.7
   share_handler_android:
-    path: ../share_handler_android
+    git:
+      url: https://github.com/Liloupar/share_handler/tree/main/share_handler_android
+#    path: ../share_handler_android
   share_handler_ios: ^0.0.13
   # share_handler_ios:
   #   path: ../share_handler_ios
