--- a/share_handler/pubspec.yaml
+++ b/share_handler/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
 #  share_handler_android: ^0.0.9
   share_handler_android:
     git:
-      url: https://github.com/Liloupar/share_handler/share_handler_android
+      url: https://github.com/Liloupar/share_handler.git
+      path: share_handler_android
 #    path: ../share_handler_android
   share_handler_ios: ^0.0.15
   # share_handler_ios:
